2019-06-19  Stan Shebs  <stanshebs@google.com>
	    Raoni Fassina Firmino  <raoni@linux.ibm.com>

	[BZ #24640]
	* sysdeps/unix/sysv/linux/powerpc/get_timebase_freq.c
	[!SHARED] (__get_timebase_freq): Fix sense of a test in the
	static-linking version.
	* sysdeps/unix/sysv/linux/powerpc/Makefile
	(tests-static): Add test-gettimebasefreq-static.
	(tests): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/test-gettimebasefreq-static.c:
	New file.

2019-06-19  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #24614]
	* localedata/locales/nl_AW (n_sep_by_space): Set to 2 (a space
	between the currency symbol and the minus sign).
	(n_sign_posn): Set to 4 (the minus sign after the currency symbol).

2019-06-19  Stefan Liebler  <stli@linux.ibm.com>

	[BZ #24556]
	* string/test-strcasestr.c (check_result): Add NULL check.
	* nss/tst-field.c (check_rewrite): Likewise.
	* benchtests/bench-strstr.c (do_one_test): Likewise.
	* string/test-strstr.c (check_result): Likewise.
	* argp/argp-test.c (popt): Increase size of buf to 12.
	* benchtests/bench-malloc-simple.c (bench):
	Do not initialize tests array out of bounds.

2019-06-19  Florian Weimer  <fweimer@redhat.com>

	[BZ #24166]
	* dlfcn/dlfcn.h (Dl_serinfo): Do not use array of length 1 for
	dls_serpath field.

2019-06-18  Florian Weimer  <fweimer@redhat.com>

	[BZ #24323]
	* include/elf.h (DT_1_SUPPORTED_MASK): Include DF_1_PIE.
	* elf/dl-load.c (_dl_map_object_from_fd): Check for DF_1_PIE and
	fail when called from dlopen.
	* elf/Makefile [have-fpie && build-shared] (tests): Add
	tst-dlopen-pie.
	(tst-dlopen-pie): Link with -ldl.
	(tst-dlopen-pie.out): Add run-time dependency on tst-pie1.
	* elf/tst-dlopen-pie.c (do_test): New file.

2019-06-17  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #24614]
	* localedata/Makefile (LOCALES): Add nl_NL.UTF-8.
	* localedata/locales/nl_NL (n_sep_by_space): Set to 2 (a space
	between the currency symbol and the minus sign).